droidscope/DECAF_plugins/old_dex_extarctor/makeout
clang++-3.7 -O2 -g -fPIC  -m64 `pkg-config --cflags glib-2.0` -fpermissive -std=c++11 -Wno-c++11-extensions -I. -I/home/csrgyin/android_art/build/external/droidscope_art/DECAF_plugins/old_dex_extarctor/libart/ -I/home/csrgyin/android_art/build/external/droidscope_art/DECAF_plugins/old_dex_extarctor/core/include -I/home/csrgyin/android_art/build/external/droidscope_art/DECAF_plugins/old_dex_extarctor/valgrind/main -I/home/csrgyin/android_art/build/external/droidscope_art/DECAF_plugins/old_dex_extarctor/valgrind/main/include -I/home/csrgyin/android_art/build/external/droidscope_art/DECAF_plugins/old_dex_extarctor/gtest/include -I/home/csrgyin/android_art/build/external/droidscope_art/DECAF_plugins/old_dex_extarctor/libnativehelper/include/nativehelper -I/home/csrgyin/android_art/build/external/droidscope_art -I/home/csrgyin/android_art/build/external/droidscope_art/qapi-auto-generated -I/home/csrgyin/android_art/build/external/droidscope_art/include -I/home/csrgyin/android_art/build/external/droidscope_art/plugins -I/home/csrgyin/android_art/build/external/droidscope_art/fpu -I/home/csrgyin/android_art/build/external/droidscope_art/DECAF_shared -I/home/csrgyin/android_art/build/external/droidscope_art/DECAF_shared/DroidScope -I/home/csrgyin/android_art/build/external/droidscope_art/target-arm -I/home/csrgyin/android_art/build/external/droidscope_art/objs -I/home/csrgyin/android_art/build/external/droidscope_art/slirp -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_GNU_SOURCE -DNEED_CPU_H  -I/home/csrgyin/android_art/build/external/droidscope_art/android/config/target-arm -c -o unpacker.o unpacker.cpp
In file included from unpacker.cpp:59:
In file included from ./thread.h:31:
In file included from ./entrypoints/interpreter/interpreter_entrypoints.h:21:
./dex_file.h:600:18: warning: offset of on non-standard-layout type 'art::DexFile' [-Winvalid-offsetof]
          return offsetof( DexFile, method_ids_ );
                 ^                  ~~~~~~~~~~~
/usr/lib/llvm-3.7/bin/../lib/clang/3.7.0/include/stddef.h:120:24: note: expanded from macro 'offsetof'
#define offsetof(t, d) __builtin_offsetof(t, d)
                       ^
unpacker.cpp:242:32: error: no matching function for call to 'VMI_find_module_by_pc'
        module* dirty_module = VMI_find_module_by_pc(begin_byte, cr3, &base);
                               ^~~~~~~~~~~~~~~~~~~~~
/home/csrgyin/android_art/build/external/droidscope_art/DECAF_shared/vmi.h:87:10: note: candidate function not viable: no known conversion from 'byte *' (aka 'unsigned char *') to 'target_ulong' (aka 'unsigned int') for 1st argument; dereference the argument with *
module * VMI_find_module_by_pc(target_ulong pc, target_ulong pgd, target_ulong *base);
         ^
unpacker.cpp:301:55: warning: cast to 'art::DexFile::ClassDef *' from smaller integer type 'uint32_t' (aka 'unsigned int') [-Wint-to-pointer-cast]
          art::DexFile::ClassDef *temp_class_defs__ = (art::DexFile::ClassDef *)(*class_defs__);
                                                      ^
unpacker.cpp:306:11: error: no matching function for call to 'DECAF_memory_rw_with_pgd'
          DECAF_read_mem_with_pgd(env, pgd_strip(cr3), temp_class_defs__, dexblock, SIZEOF_TYPE(art::DexFile::ClassDef));
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/csrgyin/android_art/build/external/droidscope_art/DECAF_shared/DECAF_main.h:322:9: note: expanded from macro 'DECAF_read_mem_with_pgd'
        DECAF_memory_rw_with_pgd(_env, _pgd, _vaddr, _buf, _len, 0)
        ^~~~~~~~~~~~~~~~~~~~~~~~
/home/csrgyin/android_art/build/external/droidscope_art/DECAF_shared/DECAF_main.h:280:15: note: candidate function not viable: no known conversion from 'art::DexFile::ClassDef *' to 'gva_t' (aka 'unsigned int') for 3rd argument
DECAF_errno_t DECAF_memory_rw_with_pgd(CPUArchState* env, target_ulong pgd, gva_t addr, void *buf,
              ^
unpacker.cpp:309:24: error: cannot initialize a variable of type 'target_ulong' (aka 'unsigned int') with an lvalue of type 'byte *' (aka 'unsigned char *')
          target_ulong base_addr = begin_byte;
                       ^           ~~~~~~~~~~
unpacker.cpp:319:10: error: no matching function for call to 'DECAF_memory_rw_with_pgd'
         DECAF_read_mem_with_pgd(env, pgd_strip(cr3), temp_str_id, block6, SIZEOF_TYPE(art::DexFile::StringId));
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/csrgyin/android_art/build/external/droidscope_art/DECAF_shared/DECAF_main.h:322:9: note: expanded from macro 'DECAF_read_mem_with_pgd'
        DECAF_memory_rw_with_pgd(_env, _pgd, _vaddr, _buf, _len, 0)
        ^~~~~~~~~~~~~~~~~~~~~~~~
/home/csrgyin/android_art/build/external/droidscope_art/DECAF_shared/DECAF_main.h:280:15: note: candidate function not viable: no known conversion from 'art::DexFile::StringId *' to 'gva_t' (aka 'unsigned int') for 3rd argument
DECAF_errno_t DECAF_memory_rw_with_pgd(CPUArchState* env, target_ulong pgd, gva_t addr, void *buf,
              ^
unpacker.cpp:340:48: error: arithmetic on a pointer to void
           phys_buf_ = qemu_get_ram_ptr(phys_) + (base_plus_offset - (base_plus_offset & TARGET_PAGE_MASK));
                       ~~~~~~~~~~~~~~~~~~~~~~~ ^
unpacker.cpp:348:15: error: no matching function for call to 'print_hex'
              print_hex(phys_buf_, 8);
              ^~~~~~~~~
unpacker.cpp:146:6: note: candidate function not viable: cannot convert argument of incomplete type 'void *' to 'uint8_t *' (aka 'unsigned char *')
void print_hex(uint8_t *s, size_t len) {
     ^
unpacker.cpp:362:42: warning: data argument not used by format string [-Wformat-extra-args]
        fprintf(log_fd_jumps, "done \n", (dirty_module) ? (dirty_module->name) : ("invalid"));
                              ~~~~~~~~~  ^
In file included from unpacker.cpp:478:
./plugin_cmds.h:4:28: error: cannot initialize a member subobject of type 'void *' with an lvalue of type 'void (Monitor *, const char *)'
  ._QEMU_MON_HANDLER_CMD = do_hookapitests,
                           ^~~~~~~~~~~~~~~
./plugin_cmds.h:11:28: error: cannot initialize a member subobject of type 'void *' with an lvalue of type 'void (Monitor *, char *)'
  ._QEMU_MON_HANDLER_CMD = do_clear_log,
                           ^~~~~~~~~~~~
3 warnings and 8 errors generated.
make: *** [unpacker.o] Error 1
